fix bug that caused comment section to be appended on top of the page on mobile

--- a/css/comment.css
+++ b/css/comment.css
@@ -1,3 +1,7 @@
+body {
+    overflow: visible;
+}
+
 footer.popover-comment {
     padding: 0.5rem 1rem;
     display: flex;
@@ -186,12 +190,10 @@ article.people-like {
 
     footer.popover-comment {
         background-color: #323232;
-        position: fixed;
         height: -webkit-fill-available;
         width: -webkit-fill-available;
         top: 3rem;
         left: 0;
-        display: block;
         margin: 0;
         display: flex;
         overflow-y: scroll;
